# tm2py-utils

./: .gitignore  404.html  DOCUMENTATION_UPDATE.md  README.md  add_acs_to_dashboard.py  check_mode_aggregation.py  check_sample_rate.py  compare_county_coverage.py  comprehensive_comparison.py  debug_geography.py  debug_geography2.py  debug_geography_load.py  docs-requirements.txt  index.html  mkdocs.yml  pivot_dashboard_data.py  pyproject.toml  regenerate_dashboard_data.py  regenerate_dashboards.py  requirements.txt  streamlit_app.py  test_geography_mapping.py  test_mode_weights.py  validation_summary_final.py
.github/: copilot-instructions.md
.streamlit/: config.toml
archived/: index.html
cityphi_visualization/: README.md
code-flow/: index.html
configuration/: index.html
contributing/: index.html
css/: extra.css
custom-summaries/: index.html
dashboard/: index.html
data-model/: index.html
deploy-dashboard/: index.html
docs/: external-data.md
external-data/: index.html
generate-summaries/: index.html
install/: index.html
notebooks/: acceptance-other.twb  on-board-survey-assignment-summary.twb
perf-mon/: make-performance-log-for-tableau.Rmd  perfmon.csv  perfomance-log-version-00.twbx  perfomance-log.twb  performance-log-for-tableau.csv  performance_monitor_instructions.txt  setup_tm_monitor.ps1  viz-perf-log.Rmd
search/: search_index.json
site/: 404.html
summaries/: index.html
summary-design-system/: index.html
tm2py_utils/: __init__.py  cli.py
tm2py_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+747 files in other folders)
