[project]
name = "tm2py-utils"
version = "0.1.0"
description = "Your project description"
authors = [
  { name = "WSP", email = "example@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["geopandas"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
